--- a/readme
+++ b/readme
@@ -5,3 +5,8 @@ se X == -1 (o cmq un valore non regolare), so che quello è un messaggio che non
 - refactoring client.c che fa schifo
 - quando il client invia un messaggio il campo message_id deve essere univoco --> check shared memory che non ci sia gia?
 - nella prima iterazione il device 1 non viene visualizzato sulla matrix
+- script bash che genera il file posizioni random
+
+QUICK START
+clear && make clean && make && ./server 123 ./input/file_posizioni.txt
+clear && source client_hub.sh 1 18964 5 hola
